<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="conteudo_banner_inicial">Banner inicial dos pacotes</string>
    <string name="title_activity_resumo_pacote">ResumoPacoteActivity</string>
    <string name="preco_final">Preço final:</string>
    <string name="descricao_imagem_resumo_destino">Imagem do local de destino</string>
    <string name="realizar_pagamento">REALIZAR PAGAMENTO</string>
    <string name="pagemento_informativo">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="pagamento_numero_cartao">Número do cartão</string>
    <string name="pagamento_valor_compra">Valor da Compra:</string>
    <string name="pagamento_mes_cartao">MM</string>
    <string name="pagamento_ano_cartao">AA</string>
    <string name="pagamento_codigo_cartao">CVC</string>
    <string name="pagamento_nome_cartao">Nome no Cartão</string>
    <string name="pagamento_botao_finalizar_compra">Finalizar Compra</string>
    <string name="pagamento_nome_cartao_digitos_permitidos">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="resumo_pagamento_parabens">Parabéns!</string>
    <string name="resumo_pagamento_informativo">Compra realizada com sucesso :)</string>
    <string name="resumo_pagamento_informativo2">Confira o resumo da compra:</string>
    <string name="resumo_pagamento_banner_inicial">Banner inicial do resumo de pagamentos</string>
    <string name="resumo_pagamento_imagem_destino">imagem de local de destino</string>
</resources>
